--- a/style.css
+++ b/style.css
@@ -143,3 +143,24 @@ nav p{
     font-size: 0.9em;
     color: #666;
 }
+footer {
+    background-color: rgb(116, 116, 167);
+    color: white;
+    text-align: center;
+    padding: 2px;
+    position: relative;
+    bottom: 0;
+    width: 100%;
+}
+footer a {
+    text-decoration: none;
+    color: inherit;
+}
+footer a:hover {
+    color: blue;
+}
+.sicon {
+    justify-content: center;
+    gap: 10px;
+    text-decoration: none;
+}
