--- a/style.css
+++ b/style.css
@@ -110,6 +110,12 @@ ul li{
     top: 0;
     
  }
+ header img{
+    width: 100%;
+    height: 100%;
+    /* border-radius: 50%;
+    margin-right: 10px; */
+ }
  .header_nav li{
     display: inline-block;
  }
@@ -151,6 +157,7 @@ footer {
     position: relative;
     bottom: 0;
     width: 100%;
+    
 }
 footer a {
     text-decoration: none;
